--- a/main.css
+++ b/main.css
@@ -191,6 +191,17 @@ h6,
   .h6 a {
     font-weight: 200; }
 
+header,
+.header {
+    padding: 30px;
+    text-align: center;		
+		width:100%;
+		height: 200px;
+		min-height: 200px;
+		max-height: 200px;
+	
+}
+
 ol,
 ul,
 dl {
