--- a/main.css
+++ b/main.css
@@ -18,7 +18,7 @@ h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, cite, cod
   line-height: 1;
   font-family: inherit; }
 
-article, aside, details, figcaption, figure, footer, header, hgroup, nav, section {
+article, aside, details, figcaption, figure, footer, hgroup, nav, section {
   display: block;
   margin: 0; }
 
@@ -199,6 +199,7 @@ header,
 		height: 200px;
 		min-height: 200px;
 		max-height: 200px;
+		color: #0e139a;
 	
 }
 
