--- a/main.css
+++ b/main.css
@@ -30,10 +30,10 @@ body {
 
 bsChrome,
 .bsChrome {
-    background-color: #aaa;
+    /*background-color: #aaa;*/
     width: 100%;
     padding: 10px;
-    image: url("https://upload.wikimedia.org/wikipedia/commons/a/a5/Google_Chrome_icon_%28September_2014%29.svg");
+    background-image: url("https://upload.wikimedia.org/wikipedia/commons/a/a5/Google_Chrome_icon_%28September_2014%29.svg");
 }
 
 }
