--- a/main.css
+++ b/main.css
@@ -31,7 +31,7 @@ body {
 bsChrome,
 .bsChrome {
     /*background-color: #aaa;*/
-    width: 100%;
+    align: center;
     padding: 10px;
     background-image: url("https://upload.wikimedia.org/wikipedia/commons/a/a5/Google_Chrome_icon_%28September_2014%29.svg");
 }
