--- a/main.css
+++ b/main.css
@@ -30,9 +30,13 @@ body {
 
 bsChrome,
 .bsChrome {
-    /*background-color: #aaa;*/
-    align: center;
+    /*background-color: #aaa;
+    align: center;*/
     padding: 10px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
     background-image: url("https://upload.wikimedia.org/wikipedia/commons/a/a5/Google_Chrome_icon_%28September_2014%29.svg");
 }
 
