--- a/main.css
+++ b/main.css
@@ -32,11 +32,15 @@ bsChrome,
 .bsChrome {
     /*background-color: #aaa;
     align: center;*/
-    padding: 10px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
+    height: 44px;
+    background-repeat: no-repeat;
+    background-position: center center;
+    border: 1px solid #d4d4d4;
+    background-color: #ffffff;
+    font-weight: normal;
+    color: #555555;
+    padding: 11px 5px 11px 5px;
+    vertical-align: middle;
     background-image: url("https://upload.wikimedia.org/wikipedia/commons/a/a5/Google_Chrome_icon_%28September_2014%29.svg");
 }
 
