--- a/main.css
+++ b/main.css
@@ -9,6 +9,14 @@ body {
     padding: 10px;
     background: #f1f1f1;
 }
+
+table.browserref td {
+    border: 1px solid #d4d4d4;
+    text-align: center;
+    padding: 8px;
+    vertical-align: top;
+}
+
 /* Header/Blog Title */
 .header {
     padding: 20px;
