--- a/main.css
+++ b/main.css
@@ -49,8 +49,7 @@ bsChrome,
     color: #555555;
     padding: 11px 5px 11px 5px;
     vertical-align: middle;
-    background-image: url("https://upload.wikimedia.org/wikipedia/commons/a/a5/Google_Chrome_icon_%28September_2014%29.svg");
-}
+    background-image: /images/Google_Chrome_icon_(September_2014);}
 
 }
 
