--- a/main.css
+++ b/main.css
@@ -49,7 +49,7 @@ bsChrome,
     color: #555555;
     padding: 11px 5px 11px 5px;
     vertical-align: middle;
-    background-image: /images/Google_Chrome_icon_(September_2014);}
+    background-image: "/images/Google_Chrome_icon_(September_2014).svg";
 
 }
 
