--- a/main.css
+++ b/main.css
@@ -52,6 +52,21 @@ bsChrome,
     background-image: url(/images/Google_Chrome_icon_September_2014.svg);
 }
 
+bsFirefox,
+.bsFirefox {
+    /*background-color: #aaa;
+    align: center;*/
+    height: 44px;
+    background-repeat: no-repeat;
+    background-position: center center;
+    border: 1px solid #d4d4d4;
+    background-color: #ffffff;
+    font-weight: normal;
+    color: #555555;
+    padding: 11px 5px 11px 5px;
+    vertical-align: middle;
+    background-image: url(/images/Firefox_logo,_2019.svg);
+}
 
 
 
