--- a/main.css
+++ b/main.css
@@ -65,7 +65,7 @@ bsFirefox,
     color: #555555;
     padding: 11px 5px 11px 5px;
     vertical-align: middle;
-    background-image: url(images/Firefox_logo,_2019.svg);
+    background-image: url(images/Firefox_logo_2019.svg);
 }
 
 
