--- a/main.css
+++ b/main.css
@@ -44,13 +44,30 @@ bsChrome,
     background-repeat: no-repeat;
     background-position: center center;
     border: 1px solid #d4d4d4;
-    background-color: #ffffff;
+    background-color: #f1f1f1;
     font-weight: normal;
     color: #555555;
     padding: 11px 5px 11px 5px;
     vertical-align: middle;
     background-image: url(images/Google_Chrome_icon_September_2014.svg);
 }
+
+bsEdge,
+.bsEdge {
+    /*background-color: #aaa;
+    align: center;*/
+    height: 44px;
+    background-repeat: no-repeat;
+    background-position: center center;
+    border: 1px solid #d4d4d4;
+    background-color: #f1f1f1;
+    font-weight: normal;
+    color: #555555;
+    padding: 11px 5px 11px 5px;
+    vertical-align: middle;
+    background-image: url(images/Firefox_logo_2019.svg);
+}
+
 
 bsFirefox,
 .bsFirefox {
@@ -60,7 +77,7 @@ bsFirefox,
     background-repeat: no-repeat;
     background-position: center center;
     border: 1px solid #d4d4d4;
-    background-color: #ffffff;
+    background-color: #f1f1f1;
     font-weight: normal;
     color: #555555;
     padding: 11px 5px 11px 5px;
