--- a/main.css
+++ b/main.css
@@ -40,7 +40,7 @@ bsChrome,
 .bsChrome {
     /*background-color: #aaa;
     align: center;*/
-    height: 44px;
+    max-height: 44px;
     background-repeat: no-repeat;
     background-position: center center;
     border: 1px solid #d4d4d4;
@@ -56,7 +56,7 @@ bsEdge,
 .bsEdge {
     /*background-color: #aaa;
     align: center;*/
-    height: 44px;
+    height: auto;
     background-repeat: no-repeat;
     background-position: center center;
     border: 1px solid #d4d4d4;
