--- a/main.css
+++ b/main.css
@@ -107,8 +107,8 @@ table.browserref {
     border-collapse: collapse;
     width: 100%;
     display: block;
-    height:50px;
-    max-height:50px;
+/*    height:50px;
+    max-height:50px; */
 }
 
 /* Style the top navigation bar */
