--- a/main.css
+++ b/main.css
@@ -41,7 +41,7 @@ bsChrome,
     background-color: #f1f1f1;
     font-weight: normal;
     color: #555555;
-    padding: 11px 5px 11px 5px;
+    padding: 11px, 5px, 11px, 5px;
     vertical-align: middle;
     background-image: url(images/Google_Chrome_icon_September_2014.svg);
 }
