--- a/main.css
+++ b/main.css
@@ -51,8 +51,7 @@ bsEdge,
 .bsEdge {
     /*background-color: #aaa;
     align: center;*/
-    width: 100%;
-    height: 100%;
+    object-fit: contain;
     background-repeat: no-repeat;
     background-position: center center;
     border: 1px solid #d4d4d4;
