--- a/main.css
+++ b/main.css
@@ -77,7 +77,7 @@ bsFirefox,
     color: #555555;
     padding: 11px 5px 11px 5px;
     vertical-align: middle;
-    background-image: url(images/safari_logo.png);
+    background-image: url(images/Safari_browser_logo.svg);
 }
 
 
