--- a/main.css
+++ b/main.css
@@ -67,8 +67,10 @@ bsEdge,
 bsFirefox,
 .bsFirefox {
     /*background-color: #aaa;
-    align: center;*/
-    object-fit: scale-down;
+    align: center;
+    object-fit: scale-down;*/
+    height: 14px;
+    width: 14px;
     background-repeat: no-repeat;
     background-position: center center;
     border: 1px solid #d4d4d4;
@@ -77,7 +79,7 @@ bsFirefox,
     color: #555555;
     padding: 11px 5px 11px 5px;
     vertical-align: middle;
-    background-image: url(images/Safari_logo.jpg);
+    background-image: url(images/safari_logo.jpg);
 }
 
 
