--- a/main.css
+++ b/main.css
@@ -60,7 +60,7 @@ bsEdge,
     color: #555555;
     padding: 11px 5px 11px 5px;
     vertical-align: middle;
-    background-image: url(images/Google_Chrome_icon_September_2014.svg);
+    background-image: url(images/Edge Icon.svg);
 }
 
 
