--- a/main.css
+++ b/main.css
@@ -15,19 +15,20 @@ body {
 .header {
     padding: 20px;
     text-align: center;		
-		width:100%;
-		height: 200px;
-		min-height: 200px;
-		max-height: 200px;
+    width:100%;
+    height: 200px;
+    min-height: 200px;
+    max-height: 200px;
 	
 }
+
 .headerimg{
 	/*background-image: url("https://b.thumbs.redditmedia.com/oy9VnYHOrajBhnOrazUEyYexY5YkQxXxEh9Tg82wWEs.png"), target="blank";*/
 	background-image: url("images/Pro Logo2.jpg"), target="blank";
 	
     	/*background-repeat:no-repeat;*/	
-		width:auto;
-		height: auto;
+	width:auto;
+	height: auto;
 }
 
 bsChrome,
@@ -59,7 +60,6 @@ bsEdge,
     vertical-align: middle;
 }
 
-
 bsFirefox,
 .bsFirefox {
     height: 14px;
@@ -87,7 +87,6 @@ bsOpera,
     padding: 11px, 5px, 11px, 5px;
     vertical-align: middle;
 }
-
 
 .bgSizeContain {
   background-image: url("https://b.thumbs.redditmedia.com/oy9VnYHOrajBhnOrazUEyYexY5YkQxXxEh9Tg82wWEs.png");
@@ -154,13 +153,13 @@ table.browserref {
     padding-left: 20px;
 }
 	
-/* Fake image */
 .fakeimg {
     background-color: #aaa;
     width: 100%;
     padding: 20px;
 	
 }
+
 /* Add a card effect for articles */
 .card {
     background-color: grey;
@@ -173,6 +172,7 @@ table.browserref {
     resize: both;
     overflow: scroll;
 }
+	
 /* Clear floats after the columns */
 .row:after {
     content: "";
@@ -180,17 +180,19 @@ table.browserref {
     clear: both;
 }
 	
-/* Footer */
-footer {
+
+footer,
+.footer {
     padding: 10px;
     text-align: center;
     background: #ddd;
     margin-top: 10px;
-		position: relative;
+    position: relative;
     bottom: 0;
     height: 30px;
-		width 100%;
+    width 100%;
 }
+	
 /* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 800px) {
     .leftcolumn, .rightcolumn {   
@@ -198,6 +200,7 @@ footer {
         padding: 0;
     }
 }
+
 /* Responsive layout - when the screen is less than 400px wide, make the navigation links stack on top of 
 	each other instead of next to each other */
 @media screen and (max-width: 400px) {
@@ -207,10 +210,11 @@ footer {
     }
 }
 	
-	#wrapper {
+#wrapper {
     width: 100%;
     overflow: hidden;
 }
+
 #container {
     width: 100%;
     margin: 0 auto;
