--- a/main.css
+++ b/main.css
@@ -115,8 +115,9 @@ table.browserref {
     border-collapse: collapse;
     width: 100%;
     display: block;
-    height:75px;
-    max-height:75px; 
+    height:50px;
+    max-height:75px;
+    padding: 8px;
 }
 
 
