--- a/main.css
+++ b/main.css
@@ -160,7 +160,7 @@ table.browserref {
     background-color: grey;
     padding: 20px;
     margin-top: 20px;
-    /*width: 160px;/*
+    width: 80%;
     height: 160px;
     /*border: 2px solid;/*
     /*color: grey;/*
