--- a/main.css
+++ b/main.css
@@ -160,12 +160,12 @@ table.browserref {
     background-color: grey;
     padding: 20px;
     margin-top: 20px;
-    /*width: 80%;*/
-    height: 160px;
+    /*width: 80%;
+    height: 160px;*/
     /*border: 2px solid;/*
-    /*color: grey;/*
+    /*color: grey;
     resize: both;
-    overflow: scroll;
+    overflow: scroll;*/
 }
 	
 /* Clear floats after the columns */
