--- a/main.css
+++ b/main.css
@@ -162,7 +162,7 @@ table.browserref {
     margin-top: 20px;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     width: 80%;
-    float: center;
+    margin: 0 auto;
 }
 	
 /* Clear floats after the columns */
