--- a/main.css
+++ b/main.css
@@ -133,6 +133,7 @@ table.browserref {
 .topnav a:hover {
     background-color: #ddd;
     color: black;
+    margin-bottom: 20px;
 }
 /* Create two unequal columns that floats next to each other */
 /* Left column */
@@ -160,6 +161,7 @@ table.browserref {
     background-color: grey;
     padding: 20px;
     margin-top: 20px;
+    margin-bottom: 20px;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     width: 80%;
     margin: 0 auto;
@@ -182,7 +184,7 @@ footer,
     position: relative;
     bottom: 0;
     height: 30px;
-    width 100%;
+    width: 80%;
 }
 	
 /* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
