--- a/main.css
+++ b/main.css
@@ -105,7 +105,7 @@ table.browserref td {
 }
 */
 
-div.cardSpace {
+.cardSpace {
   row-gap: 40px;  
 }
 
@@ -189,6 +189,7 @@ footer,
     bottom: 0;
     height: 30px;
     width: 80%;
+    margin: 0 auto;
 }
 	
 /* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
