--- a/main.css
+++ b/main.css
@@ -123,6 +123,7 @@ table.browserref {
 .topnav {
     overflow: hidden;
     background-color: #333;
+    width: 80%;
 }
 /* Style the topnav links */
 .topnav a {
@@ -137,7 +138,7 @@ table.browserref {
 .topnav a:hover {
     background-color: #ddd;
     color: black;
-    margin-bottom: 20px;
+   /* margin-bottom: 20px; */
 }
 /* Create two unequal columns that floats next to each other */
 /* Left column */
@@ -164,8 +165,9 @@ table.browserref {
 .card {
     background-color: grey;
     padding: 20px;
-    margin-top: 20px;
-    margin-bottom: 20px;
+   /* margin-top: 20px;
+    margin-bottom: 20px; */
+    margin: 20px  auto 20px auto;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     width: 80%;
 
