--- a/main.css
+++ b/main.css
@@ -123,9 +123,12 @@ table.browserref {
 .topnav {
     overflow: hidden;
     background-color: #333;
-    margin: 10px auto 10px auto;
-    width: 85%;
+    padding: 20px;
+    margin: 20px  auto 20px auto;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    width: 80%;
 }
+
 /* Style the topnav links */
 .topnav a {
     float: left;
@@ -135,14 +138,15 @@ table.browserref {
     padding: 14px 16px;
     text-decoration: none;
 }
+
 /* Change color on hover */
 .topnav a:hover {
-    
     background-color: #ddd;
     color: black;
    /* margin: 10px auto 10px auto;
 	margin-bottom: 20px; */
 }
+
 /* Create two unequal columns that floats next to each other */
 /* Left column */
 .leftcolumn {   
@@ -171,7 +175,6 @@ table.browserref {
     margin: 20px  auto 20px auto;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     width: 80%;
-
 }
 	
 /* Clear floats after the columns */
