--- a/main.css
+++ b/main.css
@@ -41,7 +41,7 @@ bsChrome,
     color: #555555;
     padding: 11px, 5px, 11px, 5px;
     vertical-align: middle;
-    background-image: url(images/Google_Chrome_icon_September_2014.svg);
+    background-image: url(images/Chrome Icon.svg);
 }
 
 bsEdge,
