--- a/main.css
+++ b/main.css
@@ -195,7 +195,11 @@ table.browserref {
     display: table;
     clear: both;
 }
-	
+
+.marginauto {
+    margin: 10px auto 20px;
+    display: block;
+}
 
 footer,
 .footer {
