--- a/main.css
+++ b/main.css
@@ -126,12 +126,13 @@ table.browserref {
     width: 100%;
     display: block;
     /* height:50px;
-    max-height:75px; */
-    padding: 8px auto 8px auto;
+    max-height:75px; 
+    padding: 8px auto 8px auto;*/
 }
 
 th {
-  height: 45px;
+  height: 35px;
+  padding: 8px 16px 8px 16px ;
 }
 
 /* Style the top navigation bar */
