--- a/main.css
+++ b/main.css
@@ -94,6 +94,25 @@ bsSafari,
     background-image: url(images/Safari_Icon.svg);
 }
 
+.bulk-email_btn {
+    margin: 0 auto;
+}
+.bulk-email_btn {
+    display: block;
+    line-height: 55px;
+    width: 270px;
+}
+.blue-btn {
+    background: #184fe1;
+    border-radius: 4px;
+    font-weight: 700;
+    font-size: 14px;
+    text-align: center;
+    color: #fff;
+    cursor: pointer;
+    transition: .3s;
+}
+
 .bgSizeContain {
   background-image: url("https://b.thumbs.redditmedia.com/oy9VnYHOrajBhnOrazUEyYexY5YkQxXxEh9Tg82wWEs.png");
   background-size: 160;
