--- a/main.css
+++ b/main.css
@@ -101,7 +101,8 @@ bsSafari,
    background: -moz-linear-gradient(top, #006db5, #007ccf);
    background: -ms-linear-gradient(top, #006db5, #007ccf);
    background: -o-linear-gradient(top, #006db5, #007ccf);
-   padding: 18px 36px;
+   /*padding: 18px 36px;*/
+   padding: 18px auto 18px auto;
    -webkit-border-radius: 7px;
    -moz-border-radius: 7px;
    border-radius: 7px;
