--- a/main.css
+++ b/main.css
@@ -153,6 +153,19 @@ table.browserref td {
   row-gap: 40px;  
 }
 
+.container {
+  height: 200px;
+  position: relative;
+}
+
+.vertical-center {
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+
 table.browserref {
     border-collapse: collapse;
     width: 100%;
