--- a/main.css
+++ b/main.css
@@ -158,6 +158,15 @@ table.browserref td {
   position: relative;
 }
 
+.center {
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+
 .vertical-center {
   margin: 0;
   position: absolute;
