--- a/main.css
+++ b/main.css
@@ -266,7 +266,7 @@ li{
   list-style-image: url('images/Checkmark_Icon.svg');
   height: 25px;
   display: block;
-  /*float: left;*/
+  float: left;
   list-style: none;
   margin-right: 20px;
 }
