--- a/main.css
+++ b/main.css
@@ -234,11 +234,14 @@ th {
     padding-left: 20px;
 }
 	
-.fakeimg {
+.productImg {
     background-color: #aaa;
     width: 100%;
     padding: 20px;
-	
+    margin: 10px  auto 10px auto;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    width: 20%;
+    float: left;	
 }
 
 /* Add a card effect for articles */
