--- a/main.css
+++ b/main.css
@@ -235,12 +235,11 @@ th {
 }
 	
 .productImg {
-    background-color: #aaa;
     padding: 20px;
-    margin: 10px  auto 10px auto;
+   /* margin: 10px  auto 10px auto;*/
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    width: 20%;
-    height 20%;
+    /*width: 20%;
+    height 20%;*/
     display:inline-flex;	
 }
 
