--- a/main.css
+++ b/main.css
@@ -240,7 +240,7 @@ th {
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     /*width: 20%;
     height 20%;*/
-    display:inline-flex;	
+    display:block;	
 }
 
 /* Add a card effect for articles */
