--- a/main.css
+++ b/main.css
@@ -233,6 +233,20 @@ th {
     background-color: #f1f1f1;
     padding-left: 20px;
 }
+
+ /* Three image containers (use 25% for four, and 50% for two, etc) */
+.column {
+  float: left;
+  width: 33.33%;
+  padding: 5px;
+}
+
+/* Clear floats after image containers */
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+} 
 	
 .productImg {
     padding: 20px;
@@ -265,39 +279,12 @@ th {
 }
 
 ul li{
-  list-style-image: url('images/Checkmark_Icon.svg');
-  height: 25px;
-  display: block;
-  float: left;
-  list-style: none;
-  margin-right: 20px;
-}
-
-.photobanner {
- height: 233px;
- width: 3550px;
- margin-bottom: 80px;
-}
- 
-.photobanner img {
- -webkit-transition: all 0.5s ease;
- -moz-transition: all 0.5s ease;
- -o-transition: all 0.5s ease;
- -ms-transition: all 0.5s ease;
- transition: all 0.5s ease;
-}
- 
-.photobanner img:hover {
- -webkit-transform: scale(1.1);
- -moz-transform: scale(1.1);
- -o-transform: scale(1.1);
- -ms-transform: scale(1.1);
- transform: scale(1.1);
- cursor: pointer;
- 
- -webkit-box-shadow: 0px 3px 5px rgba(0,0,0,0.2);
- -moz-box-shadow: 0px 3px 5px rgba(0,0,0,0.2);
- box-shadow: 0px 3px 5px rgba(0,0,0,0.2);
+    list-style-image: url('images/Checkmark_Icon.svg');
+    height: 25px;
+    display: block;
+    float: left;
+    list-style: none;
+    margin-right: 20px;
 }
 
 
@@ -337,20 +324,10 @@ footer,
     overflow: hidden;
 }
 
-/*
 #container {
     width: 100%;
     margin: 0 auto;
 }
-*/
-
-#container {
- width: 1000px;
- overflow: hidden;
- margin: 50px auto;
- background: white;
-}
-
 .banner-img {
     width: 100%;
 }
