--- a/main.css
+++ b/main.css
@@ -234,10 +234,10 @@ th {
     padding-left: 20px;
 }
 
- /* Three image containers (use 25% for four, and 50% for two, etc) */
+ /* Three image containers (use 26.6% for three, and 40% for two, etc) */
 .column {
   float: left;
-  width: 33.33%;
+  width: 26.6%;
   padding: 5px;
 }
 
