--- a/main.css
+++ b/main.css
@@ -236,7 +236,7 @@ th {
 
 p {
     font-size: 140%;
-    font-family: courier;
+    font-family: helvetica;
 }
 
  /* Three image containers (use 26.6% for three, and 40% for two, etc) */
