--- a/main.css
+++ b/main.css
@@ -266,10 +266,10 @@ p {
 
 /* Add a card effect for articles */
 .card {
-    background-color: grey;
+    background-color: #A69F9F;
     padding: 20px;
     margin: 20px  auto 20px auto;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.3);
     width: 80%;
 }
 	
