--- a/main.css
+++ b/main.css
@@ -266,7 +266,7 @@ p {
 
 /* Add a card effect for articles */
 .card {
-    background-color: #ddd;
+    background-color: #CCCCCC;
     padding: 20px;
     margin: 20px  auto 20px auto;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.5);
