--- a/main.css
+++ b/main.css
@@ -242,10 +242,10 @@ p {
  /* Three image containers (use 26.6% for three, and 40% for two, etc) */
 .column {
     float: left;
-    width: 20.0%;
+     /*width: 18.0%;*/
     height: 100px;
-    padding: 5px;
-   /* marrgin: 2px auto 2px auto;*/
+    padding: 0;
+   marrgin: 5px auto 5px auto;
 }
 
 /* Clear floats after image containers */
