--- a/main.css
+++ b/main.css
@@ -241,12 +241,16 @@ p {
 
  /* Three image containers (use 26.6% for three, and 40% for two, etc) */
 .column {
-    float: left;
+    
     display: inline-block;
-    width: 16
-    height: 100px;
+    width: 16%
+    
     padding: 5px 5px 5px 5px;
-  /* marrgin: 5px auto 5px auto;*/
+  /* 
+    height: 100px;
+    float: left;
+    marrgin: 5px auto 5px auto;
+	*/
 }
 
 /* Clear floats after image containers */
