--- a/main.css
+++ b/main.css
@@ -241,12 +241,18 @@ p {
 
  /* Three image containers (use 26.6% for three, and 40% for two, etc) */
 .column {
-    
+
+     display: inline-block;
+     width: 16%;
+
+     margin-left: 3px;
+	
+	/* 
     display: inline-block;
     width: 16%;
     
     padding: 5px 5px 5px 5px;
-  /* 
+ 
     height: 100px;
     float: left;
     marrgin: 5px auto 5px auto;
