--- a/main.css
+++ b/main.css
@@ -23,12 +23,11 @@ body {
 }
 
 .headerimg{
-	/*background-image: url("https://b.thumbs.redditmedia.com/oy9VnYHOrajBhnOrazUEyYexY5YkQxXxEh9Tg82wWEs.png"), target="blank";*/
-	background-image: url(images/QuikApply/Logos/Quickapply_Logo.svg), target="blank";
-	
-    	/*background-repeat:no-repeat;*/	
-	width:auto;
-	height: auto;
+	background-image: url(images/QuikApply/Logos/Quickapply_Logo.svg), target="blank";	
+    	background-repeat:no-repeat;
+        width:100%; 
+        height:200px; 
+
 }
 
 
