--- a/main.css
+++ b/main.css
@@ -23,7 +23,7 @@ body {
 }
 
 .headerimg{
-	background-image: url(images/QuikApply/Logos/Quickapply_Logo.svg), target="blank";	
+	background-image: url(images/QuikApply/Logos/Quickapply_Logo.svg);	
     	background-repeat:no-repeat;
         width:100%; 
         height:200px; 
