--- a/main.css
+++ b/main.css
@@ -23,11 +23,12 @@ body {
 }
 
 .headerimg{
-	background-image: url(images/QuikApply/Logos/Quickapply_Logo.svg);	
-    	background-repeat:no-repeat;
-        width:100%; 
-        height:200px; 
-
+    background-image: url(images/QuikApply/Logos/Quickapply_Logo.svg);	
+    background-repeat:no-repeat;
+    width:100%; 
+    height:200px; 
+    background-position: center center;
+    vertical-align: middle;
 }
 
 
