--- a/main.css
+++ b/main.css
@@ -22,7 +22,7 @@ body {
     max-height: 200px;
     background-image: url(images/QuikApply/Logos/Quickapply_Logo.svg);	
     background-position: center center;
-    background-size: cover;
+    background-size: contain;
     vertical-align: middle;
     background-repeat:no-repeat;
 }
