--- a/main.css
+++ b/main.css
@@ -341,8 +341,21 @@ ul {
   margin: 15px 15px 15px 15px;
 }
 
+li{
+   list-style: none;
+   background-image: url('images/Checkmark_Icon.svg');
+   background-repeat: no-repeat;
+   background-position: left center;
+   background-size: 15px;
+}
+
+
+
+/*
+
 li::before{
-   height: 1em;
+   background-size:contain;
+  
    background-image:url('images/Checkmark_Icon.svg');
    display: inline-block;
 }
@@ -351,8 +364,6 @@ li{
    list-style: none;
 }
 
-
-/*
 
 ul li{
     list-style-image: url('images/Checkmark_Icon.svg');
