--- a/main.css
+++ b/main.css
@@ -348,7 +348,7 @@ li{
    background-position: left center;
    background-size: 1em;
    padding: auto 5px auto auto;
-
+   display: inline-block;
 }
 
 
