--- a/main.css
+++ b/main.css
@@ -347,7 +347,8 @@ li{
    background-repeat: no-repeat;
    background-position: left center;
    background-size: 1em;
-   margin: auto 5px;
+   margin: 0;
+   padding: 10px 10px 10px 10px;
    
 }
 
