--- a/main.css
+++ b/main.css
@@ -347,7 +347,7 @@ li{
    background-repeat: no-repeat;
    background-position: left center;
    background-size: 1em;
-   margin: 0;
+   margin: 0 10px;
    padding: 10px 10px 10px 10px;
    
 }
