--- a/main.css
+++ b/main.css
@@ -348,7 +348,7 @@ li{
    background-position: left center;
    background-size: 1em;
    margin: 0 25px;
-   padding: 10px 20px 10px 10px;
+   padding: 10px 25px 10px;
    
 }
 
