--- a/main.css
+++ b/main.css
@@ -307,7 +307,7 @@ p {
     padding: 20px;
    /* margin: 10px  auto 10px auto;*/
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    height: 400px;
+    max-width:60%;
     display:block;	
 }
 
@@ -384,7 +384,14 @@ footer,
         width: 100%;
     }
 }
-	
+
+@media screen and (max-width: 400px) {
+    .productImg, {   
+        width: 80%;
+        padding: 0;
+    }
+}
+
 #wrapper {
     width: 100%;
     overflow: hidden;
