--- a/main.css
+++ b/main.css
@@ -304,11 +304,10 @@ p {
 } 
 	
 .productImg {
-    padding: 20px;
+    padding: 5px 5px;
    /* margin: 10px  auto 10px auto;*/
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     max-width:60%;
-    display:block;	
+
 }
 
 /* Add a card effect for articles */
