--- a/main.css
+++ b/main.css
@@ -27,7 +27,10 @@ body {
     background-repeat:no-repeat;
 }
 
-
+.backgroundImage{
+ background-image: url(images/Click.svg);
+ background-repeat: no-repeat,
+}
 
 
 /* Written for h4 tag, modify as required */
