--- a/main.css
+++ b/main.css
@@ -29,7 +29,10 @@ body {
 
 .backgroundImage{
  background-image: url(images/Click.svg);
- background-repeat: no-repeat,
+ background-repeat: no-repeat;
+ max-width: 25%;
+ background-position:
+    top left; 
 }
 
 
