--- a/main.css
+++ b/main.css
@@ -350,6 +350,8 @@ li{
    background-size: 1em;
    margin: 0 25px;
    padding: 10px 25px 10px;
+   font-size: 140%;
+   font-family: helvetica;
    
 }
 
