--- a/main.css
+++ b/main.css
@@ -349,8 +349,8 @@ li{
    background-repeat: no-repeat;
    background-position: left center;
    background-size: 1em;
-   
-   padding: 10px 25px 10px;
+  /* margin: 0 25px;*/
+   padding: 10px 25px 10px 0;
    font-size: 140%;
    font-family: helvetica;
    
