--- a/main.css
+++ b/main.css
@@ -350,7 +350,7 @@ li{
    background-position: left center;
    background-size: 1em;
   /* margin: 0 25px;*/
-   padding: 10px 25px 10px 0;
+   padding: 10px 0 25px 10px;
    font-size: 140%;
    font-family: helvetica;
    
