--- a/main.css
+++ b/main.css
@@ -31,6 +31,7 @@ body {
  background-image: url(images/Click.svg);
  background-repeat: no-repeat;
  background-size: contain;
+ opacity: 0.5;
 }
 
 
