--- a/main.css
+++ b/main.css
@@ -115,6 +115,8 @@ bsSafari,
     padding: 11px, 11px, 11px, 11px;
     vertical-align: middle;
     background-image: url(images/checkmark.svg);
+	
+}
 
 .button {
    border-top: 1px solid #96d1f8;
