--- a/main.css
+++ b/main.css
@@ -114,7 +114,7 @@ bsSafari,
     color: #555555;
     padding: 11px, 11px, 11px, 11px;
     vertical-align: middle;
-    background-image: url(images/checkmark.svg);
+    background-image: url(images/Checkmark_Icon.svg);
 	
 }
 
